Sun Oct 12 12:26:49 2003  Joern Thyssen  <jth@gnubg.org>

	* analysis.c (AnalyzeGame + others): don't analyse cube
	for cubeless play.
	(bug #5872 reported by Stefan van den Berg(?))

Sun Oct 12 11:49:33 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c (SetRollouts): change tests "a != b" to
	"fabs(a-b)>epsilon" for floats.
	(bug #4408 item 3, reported by Ian Dunstan)

Sun Oct 12 10:43:18 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c (swapGame): swap player for MOVE_TIME.
	* import.c (ImportTMGGame): handle timeouts in TMG files
	correctly when USE_TIMECONTROL is defined.

Sat Oct 11 23:22:37 2003  Joern Thyssen  <jth@gnubg.org>

	* play.c (NextTurn): protect call to gtk_timeout_remove.
	(FIXME: implement general solution?)
	(bug reported by Scott Steiner)

Sat Oct 11 18:00:03 2003  Joern Thyssen  <jth@gnubg.org>

	* text.c (TextPrologue, ExportPositionGammOnLine, HTMLPrologue):
	change format for writing score, e.g., add text for Crawford game.
	(in part reported by Neil Kazaross)

Sat Oct 11 13:15:36 2003  Joern Thyssen  <jth@gnubg.org>

	* progress.c (TextRolloutProgress): Improve rollout progress output
	when in text mode
	(suggested by Ian Shaw)

Tue Oct 7 12:06:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkcube.c, gtkgame.c: Make sure hint window is correct size in new layout.
	* gtkprefs.c, drawboard3d.c: Small memory fix.

Mon Oct 06 20:42:21 2003 GMT  Holger Bochnig <hbgg@gmx.net>

	* gtkcube.c: bring output of double and take analysis in line

Mon Oct 06 19:37:17 2003 GMT  Holger Bochnig <hbgg@gmx.net>

	* analysis.c, analysis.h, formatgs.c, gnubgmodule.c, sgf.c:
	  change categorization of doubles (2 categories each for missed and
	  wrong doubles, separator is cash point)

Mon Oct 06 18:34:47 2003 GMT  Holger Bochnig <hbgg@gmx.net>

	* gtktheory.c: fix typo (bg rate value range in theory window)

Sat Oct  4 16:40:25 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkchequer.c (UpdateMoveList): ensure that the selectec
	move is highlighted.
