@@ -1,3 +1,8 @@
+Sun Oct 12 14:57:49 2003  Joern Thyssen  <jth@gnubg.org>
+
+	* timecontrol.c: use "if ( fX )" around calls to GTK specific
+	code.
+
 Sun Oct 12 12:26:49 2003  Joern Thyssen  <jth@gnubg.org>
 
 	* analysis.c (AnalyzeGame + others): don't analyse cube
